--- a/package.json
+++ b/package.json
@@ -17,8 +17,15 @@
     "@types/node": "17.0.39",
     "@types/react": "18.0.10",
     "@types/react-dom": "18.0.5",
-    "eslint": "8.17.0",
+    "@typescript-eslint/eslint-plugin": "^5.27.0",
+    "@typescript-eslint/parser": "^5.27.0",
+    "eslint": "^8.17.0",
+    "eslint-config-airbnb": "^19.0.4",
     "eslint-config-next": "12.1.6",
+    "eslint-plugin-import": "^2.26.0",
+    "eslint-plugin-jsx-a11y": "^6.5.1",
+    "eslint-plugin-react": "^7.30.0",
+    "eslint-plugin-react-hooks": "^4.5.0",
     "typescript": "4.7.3"
   }
 }
